--- a/web/package.json
+++ b/web/package.json
@@ -6,14 +6,28 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "biome format --write"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-router": "^1.141.1",
+    "@tanstack/react-router-devtools": "^1.141.1",
+    "@tanstack/router": "0.0.1-beta.53",
+    "lucide-react": "^0.560.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-resizable-panels": "^3.0.6",
+    "shiki": "^3.20.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwind-variants": "^3.2.2",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.3.8",
     "@eslint/js": "^9.39.1",
+    "@tanstack/router-plugin": "^1.141.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
