--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,8 @@
     "format": "biome format --write",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "tsx --env-file=.env src/db/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
   "packageManager": "pnpm@10.15.0",
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
+    "@faker-js/faker": "^10.1.0",
     "@types/node": "^24.10.3",
     "@types/pg": "^8.16.0",
     "drizzle-kit": "^0.31.8",
