--- a/api/package.json
+++ b/api/package.json
@@ -26,9 +26,11 @@
     "typescript": "~5.9.3"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.47",
     "@fastify/cors": "^11.2.0",
     "@fastify/swagger": "^9.6.1",
     "@scalar/fastify-api-reference": "^1.40.5",
+    "ai": "^5.0.114",
     "drizzle-orm": "^0.45.1",
     "drizzle-zod": "^0.8.3",
     "fastify": "^5.6.2",
