--- a/web/package.json
+++ b/web/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-router": "^1.141.1",
     "@tanstack/react-router-devtools": "^1.141.1",
     "@tanstack/router": "0.0.1-beta.53",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.560.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -22,7 +25,8 @@
     "shiki": "^3.20.0",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.2.2",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.8",
